--- a/public/css/app.css
+++ b/public/css/app.css
@@ -843,11 +843,73 @@ body.modal-open {
 /*  -------------------   Session Errors   ----------------  */
 /*  -------------------------------------------------------  */
 
-.session-error {
-    background-color: #f8d7da;
-    color: #721c24;
-    border: 1px solid #f5c6cb;
-    padding: 15px;
-    margin-bottom: 20px;
-    border-radius: 5px;
+.createAuctionForm {
+    max-width: 400px;
+    margin: 0 auto;
+}
+
+/* Basic form styling */
+.createAuctionForm form {
+    display: flex;
+    flex-direction: column;
+}
+
+.createAuctionForm label {
+    margin-top: 10px;
+}
+
+.createAuctionForm input {
+    width: 100%;
+    padding: 8px;
+    margin-top: 5px;
+    margin-bottom: 10px;
+    box-sizing: border-box;
+}
+
+.createAuctionForm .final-buttons {
+    display: flex;
+    flex-direction: row;
+}
+
+.createAuctionForm button,
+.createAuctionForm .button-outline {
+    width: 48%; /* Adjust the width as needed */
+    box-sizing: border-box;
+    display: inline-block;
+}
+
+.createAuctionForm button {
+    background-color: var(--main-color);
+    color: #fff;
+    padding: 10px 15px;
+    border: none;
+    cursor: pointer;
+}
+
+.createAuctionForm button:hover{
+    background-color: var(--hover-color);
+    color: #fff;
+    padding: 10px 15px;
+    border: none;
+    cursor: pointer;
+}
+
+.createAuctionForm .button-outline {
+    background-color: transparent;
+    border: 1px solid ;
+    color: var(--main-color);
+    padding: 10px 15px;
+    text-decoration: none;
+    margin-right: 10px;
+}
+
+.createAuctionForm .button-outline:hover {
+    background-color: var(--hover-color);
+    color: #fff;
+}
+
+.createAuctionForm .error {
+    color: #ff0000;
+    margin-top: 5px;
+    display: block;
 }
