--- a/public/css/app.css
+++ b/public/css/app.css
@@ -843,6 +843,22 @@ body.modal-open {
 /*  -------------------   Session Errors   ----------------  */
 /*  -------------------------------------------------------  */
 
+.session-error {
+    background-color: #f8d7da;
+    color: #721c24;
+    border: 1px solid #f5c6cb;
+    padding: 15px;
+    margin-bottom: 20px;
+    border-radius: 5px;
+}
+
+
+/*  -------------------------------------------------------  */
+/*  --------------   Create Auction Form   ----------------  */
+/*  -------------------------------------------------------  */
+
+
+
 .createAuctionForm {
     max-width: 400px;
     margin: 0 auto;
@@ -912,4 +928,98 @@ body.modal-open {
     color: #ff0000;
     margin-top: 5px;
     display: block;
+}
+
+
+
+
+/*  -------------------------------------------------------  */
+/*  -----------------   Place Bid Form   ------------------  */
+/*  -------------------------------------------------------  */
+
+
+.createBidPage {
+    display: flex;
+    justify-content: space-between;
+    max-width: 800px;
+    margin: 0 auto;
+    padding: 20px;
+    gap: 10em;
+}
+
+.createBidPage .auctionInformation {
+    flex: 1;
+    border: 2px solid #ddd;
+    padding: 20px;
+    box-sizing: border-box;
+    border-radius: 10px;
+}
+
+.createBidPage .auctionInformation h3 {
+    color: black;
+    text-decoration: underline solid 3px var(--main-color);
+    text-underline-offset: 4px;
+}
+
+.createBidPage .auctionInformation p {
+    color: #555;
+}
+
+.createBidPage .bidList {
+    margin-top: 10px;
+    max-height: 150px;
+    overflow-y: auto;
+}
+
+.createBidPage .createBidForm {
+    flex: 1;
+    padding-left: 20px;
+}
+
+.createBidPage form {
+    max-width: 400px;
+    margin: 0 auto;
+}
+
+.createBidPage label {
+    display: block;
+    margin-bottom: 5px;
+    color: #333;
+}
+
+.createBidPage input {
+    width: 100%;
+    padding: 8px;
+    margin-bottom: 10px;
+    box-sizing: border-box;
+}
+
+.createBidPage .error {
+    color: #ff0000;
+}
+
+.createBidPage button {
+    background-color: var(--main-color);
+    color: white;
+    padding: 10px 15px;
+    border: none;
+    cursor: pointer;
+    border-radius: 5px;
+}
+
+.createBidPage .button-outline {
+    background-color: white;
+    color: var(--main-color);
+    border: 1px solid var(--main-color);
+    padding: 10px 15px;
+    text-decoration: none;
+    display: inline-block;
+    margin-right: 10px;
+    cursor: pointer;
+    border-radius: 5px;
+}
+
+.createBidPage .button-outline:hover {
+    background-color: var(--hover-color);
+    color: white;
 }
