--- a/public/css/app.css
+++ b/public/css/app.css
@@ -515,7 +515,7 @@ header h1 {
 #login-form a.button {
     display: inline-block;
     background-color: var(--main-color);
-    color: black;
+    color: white;
     text-decoration: none;
     padding: 10px 20px;
     border-radius: 4px;
@@ -589,6 +589,7 @@ header h1 {
 #register-form a.button:hover {
     background-color: var(--hover-color);
 }
+
 
 /* --------------------------------------------- */
 /*                 Notifications center          */
@@ -1030,4 +1031,114 @@ body.modal-open {
 .createBidPage .button-outline:hover {
     background-color: var(--hover-color);
     color: white;
+}
+
+
+/*  -------------------------------------------------------  */
+/*  -------------  Forgot Password Form  ------------------  */
+/*  -------------------------------------------------------  */
+
+
+#forgotPasswordForm {
+    max-width: 400px;
+    margin: 0 auto;
+    padding: 20px;
+    background-color: #f8f8f8;
+    border: 1px solid #ddd;
+    border-radius: 5px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+#forgotPasswordForm label {
+    display: block;
+    margin-bottom: 5px;
+    color: #333;
+}
+
+#forgotPasswordForm input {
+    width: 100%;
+    padding: 8px;
+    margin-bottom: 10px;
+    box-sizing: border-box;
+}
+
+#forgotPasswordForm .error {
+    color: #ff0000;
+}
+
+#forgotPasswordForm button {
+    background-color: var(--main-color);
+    color: white;
+    padding: 10px 15px;
+    border: none;
+    cursor: pointer;
+}
+
+#forgotPasswordForm button:hover {
+    background-color: var(--hover-color);
+}
+
+
+/*  -------------------------------------------------------  */
+/*  -------------  Add Credit Page  -----------------------  */
+/*  -------------------------------------------------------  */
+
+
+
+.creditPage {
+    max-width: 400px;
+    margin: 0 auto;
+    padding: 20px;
+    background-color: #fff;
+    border: 1px solid #ddd;
+    border-radius: 5px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+.creditPage .card-header {
+    font-size: 1.5em;
+    color: #333;
+    text-align: center;
+    margin-bottom: 20px;
+}
+
+.creditPage .card-body {
+    color: #555;
+}
+
+.creditPage .alert {
+    margin-bottom: 15px;
+}
+
+.creditPage .form-group {
+    margin-bottom: 20px;
+}
+
+.creditPage label {
+    display: block;
+    margin-bottom: 5px;
+    color: #333;
+}
+
+.creditPage input {
+    width: 100%;
+    padding: 8px;
+    margin-bottom: 10px;
+    box-sizing: border-box;
+}
+
+.creditPage .invalid-feedback {
+    color: #ff0000;
+}
+
+.creditPage .btn-primary {
+    background-color: var(--main-color);
+    color: var(--background-color);
+    padding: 10px 15px;
+    border: none;
+    cursor: pointer;
+}
+
+.creditPage .btn-primary:hover {
+    background-color: var(--hover-color);
 }
