--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1153,3 +1153,64 @@ body.modal-open {
 .creditPage .btn-primary:hover {
     background-color: var(--hover-color);
 }
+
+
+
+/*  -------------------------------------------------------  */
+/*  -------------  Owned Bids Page  -----------------------  */
+/*  -------------------------------------------------------  */
+
+
+.bid-list {
+    max-width: 800px;
+    margin: 0 auto;
+}
+
+
+.bid-card {
+    display: flex;
+    justify-content: space-between;
+    border: 1px solid #ddd;
+    border-radius: 8px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    padding: 15px;
+    margin-bottom: 30px;
+    background-color: #fff;
+    transition: transform 0.3s ease-in-out;
+
+}
+
+.bid-card:hover {
+    transform: translateY(-5px);
+}
+
+.bid-card .title {
+    margin-bottom: 10px;
+    text-decoration: underline 2px var(--main-color);
+}
+
+.bid-card .bid-date {
+    font-size: 15px;
+    color: #888;
+}
+
+.bid-card .bid-buttons {
+    display: flex;
+    align-items: center;
+}
+
+.bid-card .button {
+    background-color: var(--main-color);
+    color: #fff;
+    padding: 8px 15px;
+    border: none;
+    cursor: pointer;
+}
+
+.bid-card .button-outline {
+    background-color: transparent;
+    color: var(--main-color);
+    border: 1px solid var(--main-color);
+}
+
+
